fixing mobile view

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             },
         };
     </script>
-    <!-- Flowbite CSS -->
+   <!-- Flowbite CSS -->
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet">
 </head>
 <body class="bg-slate-200">
@@ -496,12 +496,18 @@
             فسوف يتم تحويلهما إلى ما يلي:
         </p>
         <br>
-        <pre style="font-family: 'Amiri', serif" class="text-gray-700">
+       <div class="hidden sm:block"> <pre style="font-family: 'Amiri', serif" class="text-gray-700">
             الخيل والليل والبيداء تعرفني            والسيف والرمح والقرطاس والقلم
         </pre>
-        <pre style="font-family: 'Amiri', serif" class="text-gray-700">
+           <pre style="font-family: 'Amiri', serif" class="text-gray-700">
             أنا الذي نظر الأعمى إلى أدبي            وأسمعت كلماتي من به صمم
+        </pre></div>
+        <div class="block sm:hidden text-xs"> <pre style="font-family: 'Amiri', serif" class="text-gray-700">
+            الخيل والليل والبيداء تعرفني        والسيف والرمح والقرطاس والقلم
         </pre>
+            <pre style="font-family: 'Amiri', serif" class="text-gray-700">
+            أنا الذي نظر الأعمى إلى أدبي          وأسمعت كلماتي من به صمم
+        </pre></div>
 
     </section>
 
