fixing mobile view

--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
     </div>
 </nav>
 <!--HEADER END-->
-<div id="problem"
-     class="max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed mt-[100px] sm:!mt-[150px] mb-20">
+<div id="problem" class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed mt-[100px] sm:!mt-[150px] mb-20">
     <h2 class="text-3xl font-bold text-[#FF7F0B] text-center mb-6">المشكلة</h2>
 
     <p class="text-lg text-gray-700 leading-relaxed">
@@ -189,7 +188,7 @@
 
 
 </div>
-<div class="max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed mb-20">
+<div class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed mb-20">
     <h2 id="7al" class="text-4xl font-extrabold text-[#FF7F0B] text-center mb-8">الحل</h2>
 
     <p class="text-lg text-gray-700 leading-relaxed mb-4">
@@ -243,7 +242,7 @@
         </li>
     </ul>
 </div>
-<div class="max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed">
+<div class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed">
     <!-- Section 1: Introduction -->
     <section id="how">
         <p class="text-lg font-semibold text-gray-700">
@@ -511,8 +510,7 @@
 
     </section>
 
-</div>
-
+</div>2
 
 <!--footer start-->
 <footer class=" bottom-0 left-0 z-20 w-full p-4 bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800 dark:border-gray-600">
