fixing sh3er format

--- a/index.html
+++ b/index.html
@@ -495,18 +495,20 @@
             فسوف يتم تحويلهما إلى ما يلي:
         </p>
         <br>
-       <div class="hidden sm:block"> <pre style="font-family: 'Amiri', serif" class="text-gray-700">
-            الخيل والليل والبيداء تعرفني            والسيف والرمح والقرطاس والقلم
-        </pre>
-           <pre style="font-family: 'Amiri', serif" class="text-gray-700">
-            أنا الذي نظر الأعمى إلى أدبي            وأسمعت كلماتي من به صمم
-        </pre></div>
-        <div class="block sm:hidden text-xs"> <pre style="font-family: 'Amiri', serif" class="text-gray-700">
-            الخيل والليل والبيداء تعرفني        والسيف والرمح والقرطاس والقلم
-        </pre>
-            <pre style="font-family: 'Amiri', serif" class="text-gray-700">
-            أنا الذي نظر الأعمى إلى أدبي          وأسمعت كلماتي من به صمم
-        </pre></div>
+<!--       <div class="hidden sm:block"> <pre style="font-family: 'Amiri', serif" class="text-gray-700">-->
+<!--            الخيل والليل والبيداء تعرفني            والسيف والرمح والقرطاس والقلم-->
+<!--        </pre>-->
+<!--           <pre style="font-family: 'Amiri', serif" class="text-gray-700">-->
+<!--            أنا الذي نظر الأعمى إلى أدبي            وأسمعت كلماتي من به صمم-->
+<!--        </pre></div>-->
+        <div class="block text-xs sm:text-sm"> <span style="text-align: justify; font-family: 'Amiri', serif" class="text-gray-700">
+             الخيل و الليل والبيداء تعرفني&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;والسيف والرمح والقرطاس والقلم
+        </span>
+            <br>
+            <br>
+            <span style="text-align: justify; font-family: 'Amiri', serif" class="text-gray-700">
+            أنا الذي نظر الأعمى إلى أدبي&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;وأسمعت كلماتي من به صمم
+        </span></div>
 
     </section>
 
