fixing sh3er format

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
             <br>
             <br>
             <span style="text-align: justify; font-family: 'Amiri', serif" class="text-gray-700">
-            أنا الذي نظر الأعمى إلى أدبي&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;وأسمعت كلماتي من به صمم
+            أنا الذي نظر الأعمى إلى أدبي&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;و&nbsp;&nbsp;أسمعت &nbsp;كلماتي &nbsp;من&nbsp; به &nbsp;صمم
         </span></div>
 
     </section>
