adding rest of the content

--- a/index.html
+++ b/index.html
@@ -200,54 +200,54 @@
         برنامج الفهارس سهل الاستخدام ويمكّنك من إصدار الفهارس التالية: </p>
 
     <ul class="space-y-6">
-        <li class="flex items-center space-x-4 hover:bg-blue-50 px-3  rounded-lg transition-all duration-200 ease-in-out">
+        <li class="flex items-center space-x-4 hover:bg-[#FF7F0B] px-3  rounded-lg transition-all duration-200 ease-in-out">
             <i class="mx-3 fas fa-book-open text-2xl text-[#FF7F0B]"></i>
             <span class="text-lg font-medium text-gray-700">فهرس الشعر</span>
         </li>
-        <li class="flex items-center space-x-4 hover:bg-blue-50 px-3  rounded-lg transition-all duration-200 ease-in-out">
+        <li class="flex items-center space-x-4 hover:bg-[#FF7F0B] px-3  rounded-lg transition-all duration-200 ease-in-out">
             <i class="mx-3 fas fa-users text-2xl text-[#FF7F0B]"></i>
             <span class="text-lg font-medium text-gray-700">فهرس الأعلام</span>
         </li>
-        <li class="flex items-center space-x-4 hover:bg-blue-50 px-3  rounded-lg transition-all duration-200 ease-in-out">
+        <li class="flex items-center space-x-4 hover:bg-[#FF7F0B] px-3  rounded-lg transition-all duration-200 ease-in-out">
             <i class="mx-3 fas fa-quran text-2xl text-[#FF7F0B]"></i>
             <span class="text-lg font-medium text-gray-700">فهرس الآيات</span>
         </li>
-        <li class="flex items-center space-x-4 hover:bg-blue-50 px-3  rounded-lg transition-all duration-200 ease-in-out">
+        <li class="flex items-center space-x-4 hover:bg-[#FF7F0B] px-3  rounded-lg transition-all duration-200 ease-in-out">
             <i class="mx-3 fas fa-book text-2xl text-[#FF7F0B]"></i>
             <span class="text-lg font-medium text-gray-700">فهرس الأحاديث</span>
         </li>
-        <li class="flex items-center space-x-4 hover:bg-blue-50 px-3  rounded-lg transition-all duration-200 ease-in-out">
+        <li class="flex items-center space-x-4 hover:bg-[#FF7F0B] px-3  rounded-lg transition-all duration-200 ease-in-out">
             <i class="mx-3 fas fa-clipboard-list text-2xl text-[#FF7F0B]"></i>
             <span class="text-lg font-medium text-gray-700">فهرس المصطلحات</span>
         </li>
-        <li class="flex items-center space-x-4 hover:bg-blue-50 px-3  rounded-lg transition-all duration-200 ease-in-out">
+        <li class="flex items-center space-x-4 hover:bg-[#FF7F0B] px-3  rounded-lg transition-all duration-200 ease-in-out">
             <i class="mx-3 fas fa-globe text-2xl text-[#FF7F0B]"></i>
             <span class="text-lg font-medium text-gray-700">فهرس البلدان</span>
         </li>
-        <li class="flex items-center space-x-4 hover:bg-blue-50 px-3  rounded-lg transition-all duration-200 ease-in-out">
+        <li class="flex items-center space-x-4 hover:bg-[#FF7F0B] px-3  rounded-lg transition-all duration-200 ease-in-out">
             <i class="mx-3 fas fa-bolt text-2xl text-[#FF7F0B]"></i>
             <span class="text-lg font-medium text-gray-700">فهرس الغزوات</span>
         </li>
-        <li class="flex items-center space-x-4 hover:bg-blue-50 px-3  rounded-lg transition-all duration-200 ease-in-out">
+        <li class="flex items-center space-x-4 hover:bg-[#FF7F0B] px-3  rounded-lg transition-all duration-200 ease-in-out">
             <i class="mx-3 fas fa-users-cog text-2xl text-[#FF7F0B]"></i>
             <span class="text-lg font-medium text-gray-700">فهرس الملل والنحل</span>
         </li>
-        <li class="flex items-center space-x-4 hover:bg-blue-50 px-3  rounded-lg transition-all duration-200 ease-in-out">
+        <li class="flex items-center space-x-4 hover:bg-[#FF7F0B] px-3  rounded-lg transition-all duration-200 ease-in-out">
             <i class="mx-3 fas fa-list-alt text-2xl text-[#FF7F0B]"></i>
             <span class="text-lg font-medium text-gray-700">فهرس العناوين (أو ما يعرف باسم الفهرست العام أو فهرس المواضيع)</span>
         </li>
-        <li class="flex items-center space-x-4 hover:bg-blue-50 px-3  rounded-lg transition-all duration-200 ease-in-out">
+        <li class="flex items-center space-x-4 hover:bg-[#FF7F0B] px-3  rounded-lg transition-all duration-200 ease-in-out">
             <i class="mx-3 fas fa-ellipsis-h text-2xl text-[#FF7F0B]"></i>
             <span class="text-lg font-medium text-gray-700">وعشرة فهارس أخرى يمكنك استخدامها كما تريد وفي الإطار الذي تراه مناسبا حيث أن تحدد وجهة الاستخدام</span>
         </li>
     </ul>
 </div>
-<div class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed">
+<div class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed mb-20">
     <!-- Section 1: Introduction -->
     <section id="how">
-        <p class="text-lg font-semibold text-gray-700">
+        <h2 class="text-3xl font-bold text-[#FF7F0B] text-center mb-6">
             كيف
-        </p>
+        </h2>
         <p class="text-gray-700">
             كل ما عليك فعله هو اختيار كلمة، ثم الضغط على أحد الأزرار في قائمة الفهارس كما هو مبين أدناه:
         </p>
@@ -512,7 +512,222 @@
 
     </section>
 
-</div>2
+</div>
+<div class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed  mb-20">
+    <h2 class="text-3xl font-bold text-[#FF7F0B] text-center mb-6">الكلفة</h2>
+
+    <p class="text-gray-700 dark:text-gray-300 mb-4">
+        لا شيء.
+    </p>
+
+    <p class="text-gray-700 dark:text-gray-300 mb-4">
+        إلى يومنا هذا، برنامج الفهارس مجاني بالكامل    </p>
+
+    <p class="text-gray-700 dark:text-gray-300 mb-4">أرسل إلى أصدقائك عنه وكن سفيرا للغة العربية</p>
+</div>
+<div class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed  mb-20">
+    <h2 class="text-3xl font-bold text-[#FF7F0B] text-center mb-6">تحميل البرنامج</h2>
+    <div class="max-w-screen-md mx-auto text-center">
+        <p class="text-gray-700 dark:text-gray-300 mb-4">
+            للحصول على كل هذه الميزات، ما عليك سوى تحميل البرنامج من هنا:
+        </p>
+        <a target="_blank" href="https://www.eversmartservices.com/fahras/Installer.msi"
+           class="block text-lg bold text-[#FF7F0B]  hover:underline text-base font-medium break-all">
+            https://www.eversmartservices.com/fahras/Installer.msi
+        </a>
+        <p class="text-gray-700 dark:text-gray-300 mt-4">
+            هذا الرابط يأخذك إلى أحدث إصدار. بعد تنزيل النسخة، قم بالنقر عليها لتثبيت البرنامج.
+            وفيما يلي لمحة عن كيفية تحميل البرنامج ومزاياه.
+        </p>
+        <p class="text-gray-700 dark:text-gray-300 mt-4">
+            وللحصول على الإصدارات السابقة، يمكنك زيارة العنوان التالي:
+        </p>
+        <a target="_blank" href="https://www.eversmartservices.com/fahras/releases.html"
+           class="block text-[#FF7F0B]  hover:underline text-base font-medium break-all">
+            https://www.eversmartservices.com/fahras/releases.html
+        </a>
+    </div>
+</div>
+<div class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] shadow-md rounded-lg p-6 space-y-6 text-gray-800 leading-relaxed mb-20">
+    <h2 class="text-2xl sm:text-3xl font-bold text-[#FF7F0B] text-center mb-4">
+        متطلبات البرنامج
+    </h2>
+    <div class="text-right">
+        <ul class="space-y-2 pr-6 text-gray-800 sm:text-lg">
+            <li class="flex items-center">
+                <i class="fa-solid fa-check text-[#FF7F0B] ml-2"></i>
+                أن يكون لديك نسخة من برنامج Office
+            </li>
+            <li class="flex items-center">
+                <i class="fa-solid fa-check text-[#FF7F0B] ml-2"></i>
+                أن يكون لديك نسخة من ويندوز
+            </li>
+        </ul>
+        <p class="text-gray-900 font-semibold mt-6">
+            لا يعمل البرنامج حتى الآن على أنظمة التشغيل التالية:
+        </p>
+        <ul class="space-y-2 pr-6 text-gray-800 sm:text-lg mt-2">
+            <li class="flex items-center">
+                <i class="fa-solid fa-xmark text-red-500 ml-2"></i>
+                Mac
+            </li>
+            <li class="flex items-center">
+                <i class="fa-solid fa-xmark text-red-500 ml-2"></i>
+                iOS
+            </li>
+            <li class="flex items-center">
+                <i class="fa-solid fa-xmark text-red-500 ml-2"></i>
+                Linux
+            </li>
+            <li class="flex items-center">
+                <i class="fa-solid fa-xmark text-red-500 ml-2"></i>
+                Android
+            </li>
+        </ul>
+    </div>
+</div>
+<div class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] shadow-md rounded-lg p-6 space-y-6 text-gray-800 leading-relaxed mb-20">
+    <h2 class="text-2xl sm:text-3xl font-bold text-[#FF7F0B] text-center mb-4">
+        تثبيت البرنامج
+    </h2>
+    <div class="text-right">
+        <p class="mb-4">
+            بعد التثبيت يظهر لك ما يلي:
+        </p>
+        <div class="relative group w-full max-w-xl mx-auto my-5">
+            <!-- Image -->
+            <img src="imgs/image_9.png" alt="Attractive Image"
+                 class="w-full rounded-lg shadow-lg transition-transform duration-300 group-hover:scale-110">
+
+        </div>
+        <p class="mb-4">
+            كما ترى فإن البرنامج يطلب منك منحه الاذن بالعمل ويتضمن ذلك بعض الأمور المتعلقة بأمن برنامج Word، لذلك لا بد من الموافقة على الأمور المذكورة في الصحيفة أعلاه قبل المتابعة.
+        </p>
+        <ul class="list-disc text-gray-700 dark:text-gray-300 mb-4 list-none">
+            <li class="mb-2">
+                <i class="fas fa-check-circle text-[#FF7F0B]"></i> منح الاذن لبرنامج Word بتشغيل الـماكرو <strong>Enable all macros</strong>
+            </li>
+            <li class="mb-2">
+                <i class="fas fa-check-circle text-[#FF7F0B]"></i> السماح بتفعيل الخيار التالي <strong>Trust access to the VBA project model</strong>
+            </li>
+        </ul>
+        <p class="text-gray-900 font-semibold mt-4 mb-6">
+            <i class="fas fa-exclamation-circle text-[#FF7F0B]"></i> ونلفت انتباهكم أننا نبذل كـل الجهد لتقديـم أفضل خدمة، لكن لا نتحمل مسـؤولية أي خطأ ربما يحصل.
+        </p>
+        <p class="mb-4">
+            إذا أخذت علما بكل ما سبق ووافقت عليه فاضغط على الزر في أدنى الصحيفة لمنح الاذن وتجهيز البرنامج.
+        </p>
+        <p class="mb-4">
+            في الصحيفة التالية (وعنوانها: فهارس إضافية) يمكنك أن تعطي اسما لكل فهرس من الفهارس الإضافية.
+        </p>
+        <div class="relative group w-full max-w-xl mx-auto my-5">
+            <!-- Image -->
+            <img src="imgs/image_10.png" alt="Attractive Image"
+                 class="w-full rounded-lg shadow-lg transition-transform duration-300 group-hover:scale-110">
+
+        </div>
+        <p class="mb-4">
+            البرنامج يتيح لك ثمانية من الفهارس المسماة ويتيح لك أيضا عشرة فهارس غير مسماة ... تم ترميزها من الحرف I إلى الحرف R. يمكنك هنا أن تقوم بتسمية هذه الفهارس الإضافية.
+        </p>
+        <p class="text-gray-900 font-semibold mb-4">
+            <i class="fas fa-exclamation-triangle text-[#FF7F0B]"></i> تنبيه: لا يمكنك استخدام أكثر من 6 حروف.
+        </p>
+        <p class="mb-4">
+            على سبيل المثال، يمكنك أن تسمي الفهرس المرمز بالحرف M بفهرس المعدات أو فهرس المزروعات ونحوه.
+        </p>
+        <p class="mb-4">
+            عندما تفتح برنامج Word ستجد أن القائمة تغيرت والفهارس الإضافيه تحمل الأسماء التي أدخلتها في هذه الصحيفة.
+        </p>
+        <p class="mb-4">
+            لاحظ ان الخيارات الثمانية من جهة اليسار قد تم إعطاء كل واحدة منها اسما (شعر، علم، آية ...).
+        </p>
+        <p class="mb-4">
+            وتركنا العشرة التي إلى جهة اليمين لنتيح لك إمكانية أن تسميها أنت كما تريد (كل ما بين السهمين).
+        </p>
+        <div class="relative group w-full max-w-xl mx-auto my-5">
+            <!-- Image -->
+            <img src="imgs/image_11.png" alt="Attractive Image"
+                 class="w-full rounded-lg shadow-lg transition-transform duration-300 group-hover:scale-110">
+
+        </div>
+        <p class="mb-4">
+            بهذه الطريقة يمكنك استخدام الفهارس التي سميناها نحن ويمكنك كذلك تسمية عشرة فهارس على حسب حاجتك.
+        </p>
+ <p class="mb-4">
+     فلنقل مثلاً أنك تكتب في الشؤون العسكرية فيمكنك أن تبتدع فهارس عسكرية فتقول مثلا: في ختام دراستي سأخصص فهرسا للأسلحة أو التشكيلات العسكرية.
+ </p>
+<p class="mb-4">
+    ولو كنت تكتب في الطب فيمكنك أن تخصص فهارس للأدوية أو الأدوات الطبية. وإن كنت باحثا في اقتصاديا فقد تقرر أن تنشئ فهرسا للعملات ... وهكذا.
+ </p>
+        <p class="mb-4">
+            فلو أدخلت أسماء الفهارس التي تريدها لاستخدامك الخاص، سيكون شريط الفهرسة كما يلي، على سبيل المثال:
+        </p>
+        <div class="relative group w-full max-w-xl mx-auto my-5">
+            <!-- Image -->
+            <img src="imgs/image_12.png" alt="Attractive Image"
+                 class="w-full rounded-lg shadow-lg transition-transform duration-300 group-hover:scale-110">
+
+        </div>
+        <p class="mb-4">
+            كما ترى فإن كل الخيارات التي في الشريط قد تم تسميتها لا سيما التي في جهة اليمين.
+        </p>
+
+        <p class="mb-4">
+            وفي الصحيفة الأخيرة من البرنامج، تجد عددا من الأزرار التي تقدم بعض المساعدة، ونترك لك مهمة استكشافها.        </p>
+
+    </div>
+</div>
+<div class="max-w-4xl mx-auto p-6 space-y-8 bg-[#FFF9EB] rounded-lg shadow-lg mb-20">
+    <h2 class="text-3xl font-bold text-[#FF7F0B] text-center mb-6">
+        للتواصل معنا
+    </h2>
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+        <!-- Email Card -->
+        <div class="bg-white rounded-lg shadow-lg p-6 text-center flex flex-col items-center space-y-4 transition-transform transform hover:scale-105 hover:shadow-xl duration-300">
+            <div class="w-16 h-16 bg-[#FF7F0B] rounded-full text-white flex items-center justify-center">
+                <i class="fas fa-envelope text-2xl"></i>
+            </div>
+            <p class="text-lg font-semibold text-gray-800">Email</p>
+            <a href="mailto:rolahitani@gmail.com" class="text-[#FF7F0B] hover:text-blue-800">rolahitani@gmail.com</a>
+        </div>
+
+        <!-- WhatsApp Card -->
+        <div class="bg-white rounded-lg shadow-lg p-6 text-center flex flex-col items-center space-y-4 transition-transform transform hover:scale-105 hover:shadow-xl duration-300">
+            <div class="w-16 h-16 bg-[#FF7F0B] rounded-full text-white flex items-center justify-center">
+                <i class="fab fa-whatsapp text-2xl"></i>
+            </div>
+            <p class="text-lg font-semibold text-gray-800">WhatsApp</p>
+            <a dir="auto" href="https://wa.me/+96171351598" class="text-[#FF7F0B] hover:text-blue-800">+961-71-351598</a>
+        </div>
+
+        <!-- Telegram Card -->
+        <div class="bg-white rounded-lg shadow-lg p-6 text-center flex flex-col items-center space-y-4 transition-transform transform hover:scale-105 hover:shadow-xl duration-300">
+            <div class="w-16 h-16 bg-[#FF7F0B] rounded-full text-white flex items-center justify-center">
+                <i class="fab fa-telegram-plane text-2xl"></i>
+            </div>
+            <p class="text-lg font-semibold text-gray-800">Telegram</p>
+            <a href="https://t.me/alfahares" class="text-[#FF7F0B] hover:text-blue-800">@alfahares</a>
+        </div>
+
+        <!-- Instagram Card -->
+        <div class="bg-white rounded-lg shadow-lg p-6 text-center flex flex-col items-center space-y-4 transition-transform transform hover:scale-105 hover:shadow-xl duration-300">
+            <div class="w-16 h-16 bg-[#FF7F0B] rounded-full text-white flex items-center justify-center">
+                <i class="fab fa-instagram text-2xl"></i>
+            </div>
+            <p class="text-lg font-semibold text-gray-800">Instagram</p>
+            <a href="https://instagram.com/alfahares" class="text-[#FF7F0B] hover:text-blue-800">@alfahares</a>
+        </div>
+    </div>
+
+</div>
+<div class="max-w-4xl mx-auto p-6 space-y-8 bg-[#FFF9EB] rounded-lg shadow-lg mb-20"><div class="bg-[#FFF9EB] border border-gray-200 rounded-lg shadow-lg p-6 text-center">
+    <p class="text-lg text-gray-800">نتمنى أن يعجبك البرنامج وإن كان لديك أي ملاحظة فلا تبخل بنصيحتك!</p>
+    <p class="font-semibold text-[#FF7F0B] mt-4">فريق عمل برنامج الفهارس</p>
+</div></div>
+
+
+
 
 <!--footer start-->
 <footer class=" bottom-0 left-0 z-20 w-full p-4 bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800 dark:border-gray-600">
