contact us edits

--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
 
     </div>
 </div>
-<div class="max-w-4xl mx-auto p-6 space-y-8 bg-[#FFF9EB] rounded-lg shadow-lg mb-20">
+<div class="max-w-xs sm:max-w-4xl mx-auto p-6 space-y-8 bg-[#FFF9EB] rounded-lg shadow-lg mb-20">
     <h2 class="text-3xl font-bold text-[#FF7F0B] text-center mb-6">
         للتواصل معنا
     </h2>
