last section edits

--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
     </div>
 
 </div>
-<div class="max-w-4xl mx-auto p-6 space-y-8 bg-[#FFF9EB] rounded-lg shadow-lg mb-20"><div class="bg-[#FFF9EB] border border-gray-200 rounded-lg shadow-lg p-6 text-center">
+<div class="max-w-xs sm:max-w-4xl mx-auto p-6 space-y-8 bg-[#FFF9EB] rounded-lg shadow-lg mb-20"><div class="bg-[#FFF9EB] border border-gray-200 rounded-lg shadow-lg p-6 text-center">
     <p class="text-lg text-gray-800">نتمنى أن يعجبك البرنامج وإن كان لديك أي ملاحظة فلا تبخل بنصيحتك!</p>
     <p class="font-semibold text-[#FF7F0B] mt-4">فريق عمل برنامج الفهارس</p>
 </div></div>
