--- a/index.html
+++ b/index.html
@@ -742,23 +742,25 @@
 
 
 <!--footer start-->
-<footer class=" bottom-0 left-0 z-20 w-full p-4 bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800 dark:border-gray-600">
-    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"> فريق عمل برنامج الفهرس</span>
-    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+<footer class="bottom-0 left-0 z-20 w-full p-4 bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800 dark:border-gray-600">
+    <span class="text-sm text-gray-500 text-center md:text-right dark:text-gray-400">
+        فريق عمل برنامج الفهرس
+    </span>
+    <ul class="flex flex-wrap justify-center md:justify-end items-center mt-3 space-x-4 rtl:space-x-reverse text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">المشكلة</a>
+            <a href="#problem" class="hover:text-[#FF7F0B] transition hover:underline">المشكلة</a>
         </li>
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">كيف</a>
+            <a href="#how" class="hover:text-[#FF7F0B] transition hover:underline">كيف</a>
         </li>
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">تحميل البرنامج</a>
+            <a href="#download" class="hover:text-[#FF7F0B] transition hover:underline">تحميل البرنامج</a>
         </li>
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">متطلبات البرنامج</a>
+            <a href="#req" class="hover:text-[#FF7F0B] transition hover:underline">متطلبات البرنامج</a>
         </li>
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">تثبيت البرنامج</a>
+            <a href="#install" class="hover:text-[#FF7F0B] transition hover:underline">تثبيت البرنامج</a>
         </li>
     </ul>
 </footer>
