--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 <!--HEADER END-->
 <div id="problem"
      class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed mt-[100px] sm:!mt-[150px] mb-20">
-    <h2 class="text-3xl font-bold text-[#e37b21] text-center mb-6">
-        <img src="logo.png" class="h-8 w-8 mx-auto mb-2">
+    <h2 class="text-3xl font-bold text-[#e37b21] text-center mb-6 !mt-2">
+        <img src="logo.png" class="h-10 w-10 bg-white p-2 border-1 border-black-100 rounded-[5px] border">
         المشكلة</h2>
 
     <p class="text-lg text-gray-700 leading-relaxed">
@@ -207,7 +207,7 @@
 </div>
 <div class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed mb-20">
     <h2 id="solution" class="text-4xl font-extrabold text-[#e37b21] text-center mb-8"><img src="logo.png"
-                                                                                           class="h-8 w-8 mx-auto mb-2">
+                                                                                           class="h-10 w-10 bg-white p-2 border-1 border-black-100 rounded-[5px] border mb-2">
         الحل</h2>
 
     <p class="text-lg text-gray-700 leading-relaxed mb-4">
@@ -266,8 +266,8 @@
 <div class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed mb-20">
     <!-- Section 1: Introduction -->
     <section id="how">
-        <h2 class="text-3xl font-bold text-[#e37b21] text-center mb-6">
-            <img src="logo.png" class="h-8 w-8 mx-auto mb-2">
+        <h2 class="text-3xl font-bold text-[#e37b21] text-center mb-6 !mt-2">
+            <img src="logo.png" class="h-10 w-10 bg-white p-2 border-1 border-black-100 rounded-[5px] border mb-2">
             كيف
         </h2>
         <p class="text-gray-700">
@@ -535,7 +535,7 @@
 
 </div>
 <div class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed  mb-20">
-    <h2 class="text-3xl font-bold text-[#e37b21] text-center mb-6">            <img src="logo.png" class="h-8 w-8 mx-auto mb-2">
+    <h2 class="text-3xl font-bold text-[#e37b21] text-center mb-6 !mt-2">            <img src="logo.png" class="h-10 w-10 bg-white p-2 border-1 border-black-100 rounded-[5px] border mb-2">
         الكلفة</h2>
 
     <p class="text-gray-700 dark:text-gray-300 mb-4">
@@ -549,7 +549,7 @@
 </div>
 <div id="download"
      class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] from-gray-50 to-blue-50 shadow-md rounded-lg p-8 space-y-8 text-gray-800 leading-relaxed  mb-20">
-    <h2 class="text-3xl font-bold text-[#e37b21] text-center mb-6">            <img src="logo.png" class="h-8 w-8 mx-auto mb-2">
+    <h2 class="text-3xl font-bold text-[#e37b21] text-center mb-6 !mt-2">            <img src="logo.png" class="h-10 w-10 bg-white p-2 border-1 border-black-100 rounded-[5px] border mb-2">
         تحميل البرنامج</h2>
     <div class="max-w-screen-md mx-auto text-center">
         <p class="text-gray-700 dark:text-gray-300 mb-4">
@@ -575,7 +575,7 @@
 <div id="req"
      class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] shadow-md rounded-lg p-6 space-y-6 text-gray-800 leading-relaxed mb-20">
     <h2 class="text-2xl sm:text-3xl font-bold text-[#e37b21] text-center mb-4">
-        <img src="logo.png" class="h-8 w-8 mx-auto mb-2">
+        <img src="logo.png" class="h-10 w-10 bg-white p-2 border-1 border-black-100 rounded-[5px] border mb-2">
         متطلبات البرنامج
     </h2>
     <div class="text-right">
@@ -713,8 +713,8 @@
     </div>
 </div>
 <div id="contact_us" class="max-w-xs sm:max-w-4xl mx-auto p-6 space-y-8 bg-[#FFF9EB] rounded-lg shadow-lg mb-20">
-    <h2 class="text-3xl font-bold text-[#e37b21] text-center mb-6">
-        <img src="logo.png" class="h-8 w-8 mx-auto mb-2">
+    <h2 class="text-3xl font-bold text-[#e37b21] text-center mb-6 !mt-2">
+        <img src="logo.png" class="h-10 w-10 bg-white p-2 border-1 border-black-100 rounded-[5px] border mb-2">
         للتواصل معنا
     </h2>
 
@@ -760,7 +760,7 @@
 </div>
 <div class="max-w-xs sm:max-w-4xl mx-auto p-6 space-y-8 bg-[#FFF9EB] rounded-lg shadow-lg mb-20">
     <div class="bg-[#FFF9EB] border border-gray-200 rounded-lg shadow-lg p-6 text-center">
-        <img src="logo.png" class="h-8 w-8 mx-auto mb-2">
+        <img src="logo.png" class="h-10 w-10 bg-white p-2 border-1 border-black-100 rounded-[5px] border mb-2">
         <p class="text-lg text-gray-800">نتمنى أن يعجبك البرنامج وإن كان لديك أي ملاحظة فلا تبخل بنصيحتك!</p>
         <p class="font-semibold text-[#e37b21] mt-4">فريق عمل برنامج الفهارس</p>
     </div>
