--- a/releases.html
+++ b/releases.html
@@ -154,8 +154,8 @@
 <!--HEADER END-->
 <div id="releases"
      class="max-w-xs sm:max-w-4xl mx-auto bg-[#FFF9EB] shadow-md rounded-lg p-6 space-y-6 text-gray-800 leading-relaxed mb-20 mt-[120px]">
-    <h2 class=" text-2xl sm:text-3xl font-bold text-[#e37b21] text-center mb-4">
-        <img src="logo.png" class="h-8 w-8 mx-auto mb-2">
+    <h2 class=" text-2xl sm:text-3xl font-bold text-[#e37b21] text-center mb-4 !mt-0">
+        <img src="logo.png" class="h-10 w-10 bg-white p-2 border-1 border-black-100 rounded-[5px] border mb-2">
         الإصدارات     </h2>
     <div class="text-right">
         <p class="text-lg text-center mb-6">هنا تجد جميع الإصدارات الخاصة ببرنامج الفهارس.</p>
